[package]
name = "udp_sas"
version = "0.1.0"
authors = ["Anthony Baire <ayba@free.fr>"]
description = "Source address selection for UDP sockets"
keywords = ["udp", "IP_PKTINFO", "IPV6_RECVPKTINFO"]
categories = ["network-programming", "os::unix-apis"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[build-dependencies]
gcc = "0.3"


[dependencies]
libc  = "0.2"
