[package]
name = "udp_sas"
version = "0.1.3"
authors = ["Anthony Baire <ayba@free.fr>"]
description = "Source address selection for UDP sockets"
keywords = ["udp", "IP_PKTINFO", "IPV6_RECVPKTINFO"]
categories = ["network-programming", "os::unix-apis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/a-ba/udp_sas"
readme = "README.md"

build = "build.rs"

[badges]
travis-ci = { repository = "a-ba/udp_sas", branch = "master" }

[build-dependencies]
cc = "1.0"


[dependencies]
libc  = "0.2"
os_socketaddr = "0.1"
